# pico-embedded-system

./: .clang-format  .gitignore  Makefile  README.md
freertos/: CMakeLists.txt
freertos/FreeRTOS/include/: FreeRTOSConfig.h
freertos/ampel/: CMakeLists.txt  main.cpp
